--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,11 +46,11 @@ jobs:
         run: terraform validate
 
       - name: Plan Terraform for VPC
-        #if: github.ref == 'refs/heads/main' # Executa apenas na branch main
+        if: github.ref == 'refs/heads/main' # Executa apenas na branch main
         working-directory: terraform
         run: terraform plan -out=vpc
 
       - name: Apply Terraform for VPC
-        #if: github.ref == 'refs/heads/main' # Executa apenas na branch main
+        if: github.ref == 'refs/heads/main' # Executa apenas na branch main
         working-directory: terraform
         run: terraform apply -auto-approve vpc
