--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   # Job para verificação do terraform do vpc em pull requests e merge para a main e push da main 
-  db:
+  vpc:
     name: Terraform Verification and Push VPC
     runs-on: ubuntu-latest
 
